make sure popup is visible for all rows

--- a/webapp/channels/src/components/user_groups_modal/user_groups_modal.scss
+++ b/webapp/channels/src/components/user_groups_modal/user_groups_modal.scss
@@ -310,6 +310,12 @@
                         .MenuWrapper {
                             width: 24px;
                             margin-left: auto;
+                            .Menu {
+                                position: absolute;
+                                border-radius: 4px;
+                                border: 1px solid rgba(var(--center-channel-color-rgb), 0.16);
+                                margin-top: 8px;
+                            }
                         }
 
                         .group-actions-menu {
